--- a/resto3.html
+++ b/resto3.html
@@ -2,18 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  
-  <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="">
   
-  <header class="">
-    <div class="">
+  <header>
+    <div>
       <a href="accueil.html"><i class="fas fa-arrow-left "></i></a>
       <h1 class="">ohmyfood</h1>
     </div>
   </header>
 
-  <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="">
+  <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img">
 
   <main class="">
     <header class="">
@@ -157,7 +156,7 @@
     </div>
   </main>
 
-  <footer class="footer">
+  <footer class="">
     <div>
       <span>ohmyfood</span>
       <ul class="">
