--- a/resto4.html
+++ b/resto4.html
@@ -2,8 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  
-  <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="">
   
   <header class="">
@@ -13,14 +12,14 @@
     </div>
   </header>
 
-  <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="">
+  <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="">
 
   <main class="">
     <header class="">
       <h2 class="">A la française</h2>
       <button class="">
         <i class="far fa-heart fa-2x"></i>
-     
+  
       </button>
     </header>
 
@@ -157,7 +156,7 @@
     </div>
   </main>
 
-  <footer class="footer">
+  <footer class="">
     <div>
       <span>ohmyfood</span>
       <ul class="">
