--- a/accueil.html
+++ b/accueil.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/accueil.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script
       src="https://kit.fontawesome.com/81c5303e8c.js"
       crossorigin="anonymous"
@@ -71,8 +71,8 @@
                   </div>
                 </footer>
               </a>
-              <a class="carte" href="resto1.html">
-                <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="carte_img">
+              <a class="carte" href="resto2.html">
+                <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="carte_img">
                 <span class="carte_badge">Nouveau</span>
                 <footer class="carte_footer">
                   <div class="carte_content">
@@ -85,8 +85,8 @@
                   </div>
                 </footer>
               </a>
-              <a class="carte" href="resto1.html">
-                <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="carte_img">
+              <a class="carte" href="resto3.html">
+                <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="carte_img">
                 <span class="carte_badge">Nouveau</span>
                 <footer class="carte_footer">
                   <div class="carte_content">
@@ -99,8 +99,8 @@
                   </div>
                 </footer>
               </a>
-              <a class="carte" href="resto1.html">
-                <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="carte_img">
+              <a class="carte" href="resto4.html">
+                <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="carte_img">
                 <span class="carte_badge">Nouveau</span>
                 <footer class="carte_footer">
                   <div class="carte_content">
@@ -117,5 +117,25 @@
           </div>         
         </section>
      </section>
+  
+    <footer class="footer">
+      <div >
+        <span>ohmyfood</span>
+        <ul>
+          <li>
+            <a  href="#"><i class="footer__icon fas fa-utensils"></i>Proposer un restaurant</a>
+          </li>
+          <li class="footer__listElt">
+            <a href="#"><i class="footer__icon fas fa-hands-helping"></i>Devenir partenaire</a>
+          </li>
+          <li>
+            <a  href="#">Mentions légales</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
