--- a/La note enchantée.html
+++ b/La note enchantée.html
@@ -170,7 +170,7 @@
   </main>
 
   <footer class="footer">
-    <div class="contenu">
+    <div class="footer__contenu">
       <span class="footer__logo">ohmyfood</span>
       <ul class="footer__list">
         <li class="footer__listElt">
