--- a/A la française.html
+++ b/A la française.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="css/main.css">
+  
   
   <header class="header">
     <div>
-      <a href="accueil.html"><i class="fas fa-arrow-left "></i></a>
+      <a href="index.html"><i class="fas fa-arrow-left btn-retour"></i></a>
       <h1 class="header__logo">ohmyfood</h1>
     </div>
   </header>
@@ -18,15 +19,17 @@
     <header class="menu__header">
       <h2 class="menu__titre">A la française</h2>
       <button class="menu__btn">
-        <i class="far fa-heart fa-2x"></i>
+        <i class=" far fa-heart fa-2x"></i>
+        <i class="likfas fas fa-heart fa-2x"></i>
+      
      
       </button>
-    </header>
+    </header> 
 
     <div class="blocmenus">
       <section class="blocmenu">
         <h3 class="blocmenu__titre">Entrées</h3>
-        <section class="menucart">
+        <section class="delay-0 menucart">
           <header class="menucart__header">
             <h4 class="menucart__titre">Tartare de poulpe acidulé</h4>
             <p class="menucart__description">Aux zests d'orange</p>
@@ -153,24 +156,30 @@
 
   
     <div class="wrapBtn">
-      <button class="commandBtn">Commander</button>
+      <button class="p1_btn">Commander</button>
     </div>
   </main>
 
   <footer class="footer">
-    <div class="contenu">
+    <div class="footer__contenu">
       <span class="footer__logo">ohmyfood</span>
       <ul class="footer__list">
         <li class="footer__listElt">
-          <a class="footer__link" href="#"><i class="footer__icon fas fa-utensils"></i>Proposer un restaurant</a>
+          <a class="footer__link" href="#"
+            ><i class="footer__icon fas fa-utensils"></i>Proposer un
+            restaurant</a
+          >
         </li>
         <li class="footer__listElt">
-          <a class="footer__link" href="#"><i class="footer__icon fas fa-hands-helping"></i>Devenir partenaire</a>
+          <a class="footer__link" href="#"
+            ><i class="footer__icon fas fa-hands-helping"></i>Devenir
+            partenaire</a
+          >
         </li>
         <li class="footer__listElt">
           <a class="footer__link" href="#">Mentions légales</a>
         </li>
-        <li class="footer__listElt" >
+        <li class="footer__listElt">
           <a class="footer__link" href="#">Contact</a>
         </li>
       </ul>
