--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Ohmyfood</title>
   </head>
   <body>
+    <div class="loaderwarpp">
+      <div class="loader"></div>
+    </div>
     <!--partie logo -->
     <header class="header header__logo">
       <img src="img/logo/ohmyfood.png" alt="" class="taillelogo" />
@@ -69,7 +72,8 @@
                   <span>Ménilmontant</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart fa-2x"></i>
+                  <i class="likfas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -86,7 +90,8 @@
                   <span>Charonne</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart fa-2x"></i>
+                  <i class="likfas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -96,14 +101,15 @@
                 alt=""
                 class="carte__img"
               />
-              <span class="carte__badge">Nouveau</span>
+
               <footer class="carte__footer">
                 <div class="carte__content">
                   <h3>À la française</h3>
                   <span>Cité Rouge</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart fa-2x"></i>
+                  <i class="likfas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -113,14 +119,15 @@
                 alt=""
                 class="carte__img"
               />
-              <span class="carte__badge">Nouveau</span>
+
               <footer class="carte__footer">
                 <div class="carte__content">
                   <h3>Le délice des sens</h3>
                   <span>Folie-Méricourt</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart fa-2x"></i>
+                  <i class="likfas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
