--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="p1_text">
           Découvrez des restaurants d'exception, séléctionnés par nos soins
         </p>
-        <a class="p1_btn"> Explorer nos restaurants </a>
+        <a class="btn"> Explorer nos restaurants </a>
       </section>
       <!--partie2 choix -->
       <section class="choix">
@@ -72,8 +72,8 @@
                   <span>Ménilmontant</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart fa-2x"></i>
-                  <i class="likfas fas fa-heart fa-2x"></i>
+                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -90,8 +90,8 @@
                   <span>Charonne</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart fa-2x"></i>
-                  <i class="likfas fas fa-heart fa-2x"></i>
+                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -108,26 +108,25 @@
                   <span>Cité Rouge</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart fa-2x"></i>
-                  <i class="likfas fas fa-heart fa-2x"></i>
+                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
-            <a class="carte" href="./Le délice des sens.html">
+            <a class="carte" href="Le délice des sens.html">
               <img
                 src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt=""
                 class="carte__img"
               />
-
               <footer class="carte__footer">
                 <div class="carte__content">
                   <h3>Le délice des sens</h3>
                   <span>Folie-Méricourt</span>
                 </div>
                 <div>
-                  <i class="fa-regular fa-heart fa-2x"></i>
-                  <i class="likfas fas fa-heart fa-2x"></i>
+                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
