--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="contenu">
           <h2>Restaurants</h2>
           <div class="cartes">
-            <a class="carte" href="./La palette du goût.html">
+            <a class="carte" href="Lapalettedugoût.html">
               <img
                 src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt=""
@@ -77,7 +77,7 @@
                 </div>
               </footer>
             </a>
-            <a class="carte" href="./La note enchantée.html">
+            <a class="carte" href="Lanoteenchantée.html">
               <img
                 src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt=""
@@ -95,7 +95,7 @@
                 </div>
               </footer>
             </a>
-            <a class="carte" href="./A la française.html">
+            <a class="carte" href="Alafrançaise.html">
               <img
                 src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt=""
@@ -113,7 +113,7 @@
                 </div>
               </footer>
             </a>
-            <a class="carte" href="Le délice des sens.html">
+            <a class="carte" href="Ledélicedessens.html">
               <img
                 src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt=""
