--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <span>Ménilmontant</span>
                 </div>
                 <div>
-                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefar far fa-heart fa-2x"></i>
                   <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
@@ -90,7 +90,7 @@
                   <span>Charonne</span>
                 </div>
                 <div>
-                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefar far fa-heart fa-2x"></i>
                   <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
@@ -108,7 +108,7 @@
                   <span>Cité Rouge</span>
                 </div>
                 <div>
-                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefar far fa-heart fa-2x"></i>
                   <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
@@ -125,7 +125,7 @@
                   <span>Folie-Méricourt</span>
                 </div>
                 <div>
-                  <i class="likefar fa-regular fa-heart fa-2x"></i>
+                  <i class="likefar far fa-heart fa-2x"></i>
                   <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
