--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div>
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas fas fa-heart fa-2x"></i>
+                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -91,7 +91,7 @@
                 </div>
                 <div>
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas fas fa-heart fa-2x"></i>
+                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -109,7 +109,7 @@
                 </div>
                 <div>
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas fas fa-heart fa-2x"></i>
+                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -126,7 +126,7 @@
                 </div>
                 <div>
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas fas fa-heart fa-2x"></i>
+                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
