--- a/Lapalettedugoût.html
+++ b/Lapalettedugoût.html
@@ -19,7 +19,7 @@
       <h2 class="menu__titre">La palette du goût</h2>
       <button class="menu__btn">
         <i class="likefar far fa-heart fa-2x"></i>
-        <i class="likefas fas fa-heart fa-2x"></i>
+        <i class="likefas likefas__margemenu fas fa-heart fa-2x"></i>
       
      
       </button>
