--- a/Ledélicedessens.html
+++ b/Ledélicedessens.html
@@ -19,7 +19,7 @@
       <h2 class="menu__titre">Le délice des sens</h2>
       <button class="menu__btn">
         <i class=" likefar far fa-heart fa-2x"></i>
-        <i class="likefas fas fa-heart fa-2x"></i>
+        <i class="likefas likefas__margemenu fas fa-heart fa-2x"></i>
       
      
       </button>
