--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       src="https://kit.fontawesome.com/81c5303e8c.js"
       crossorigin="anonymous"
     ></script>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood</title>
   </head>
@@ -36,9 +35,8 @@
       </section>
       <!--partie2 choix -->
       <section class="choix">
-        <div class="contenu">
+        <div>
           <h2 class="choix_title">Fonctionnement</h2>
-
           <ol class="choix_steps">
             <li class="choix_step">
               <i class="choix_icon fas fa-mobile-alt"></i>
@@ -71,9 +69,9 @@
                   <h3>La palette du goût</h3>
                   <span>Ménilmontant</span>
                 </div>
-                <div>
+                <div class="postion">
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
+                  <i class="likefas fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -89,9 +87,9 @@
                   <h3>La note enchantée</h3>
                   <span>Charonne</span>
                 </div>
-                <div>
+                <div class="postion">
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
+                  <i class="likefas  fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -107,9 +105,9 @@
                   <h3>À la française</h3>
                   <span>Cité Rouge</span>
                 </div>
-                <div>
+                <div class="postion">
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
+                  <i class="likefas  fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -124,9 +122,9 @@
                   <h3>Le délice des sens</h3>
                   <span>Folie-Méricourt</span>
                 </div>
-                <div>
+                <div class="postion">
                   <i class="likefar far fa-heart fa-2x"></i>
-                  <i class="likefas likefas__margeindex fas fa-heart fa-2x"></i>
+                  <i class="likefas  fas fa-heart fa-2x"></i>
                 </div>
               </footer>
             </a>
@@ -155,7 +153,7 @@
             <a class="footer__link" href="#">Mentions légales</a>
           </li>
           <li class="footer__listElt">
-            <a class="footer__link" href="#">Contact</a>
+            <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
           </li>
         </ul>
       </div>
