--- a/Alafrançaise.html
+++ b/Alafrançaise.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css">
-  
-  
+  <title>a la francaise</title>
+</head>
+<body>
   <header class="header">
     <div>
       <a href="index.html"><i class="fas fa-arrow-left btn-retour"></i></a>
@@ -21,8 +22,6 @@
       <button class="menu__btn">
         <i class=" likefar far fa-heart fa-2x"></i>
         <i class="likefas likefas__margemenu fas fa-heart fa-2x"></i>
-      
-     
       </button>
     </header> 
 
@@ -152,10 +151,7 @@
           </div>
         </section>
       </section>
-    </div>
-
-  
-    <div class="centrerBtn">
+       <div class="centrerBtn">
       <a class="btn">Commander</a>
     </div>
   </main>
@@ -180,7 +176,7 @@
           <a class="footer__link" href="#">Mentions légales</a>
         </li>
         <li class="footer__listElt">
-          <a class="footer__link" href="#">Contact</a>
+          <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
         </li>
       </ul>
     </div>
