--- a/Lanoteenchantée.html
+++ b/Lanoteenchantée.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css">
-  
-  
+  <title>la note en chantée</title>
+</head>
+<body>
   <header class="header">
     <div>
       <a href="index.html"><i class="fas fa-arrow-left btn-retour "></i></a>
@@ -193,7 +194,7 @@
           <a class="footer__link" href="#">Mentions légales</a>
         </li>
         <li class="footer__listElt">
-          <a class="footer__link" href="#">Contact</a>
+          <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
         </li>
       </ul>
     </div>
