--- a/Ledélicedessens.html
+++ b/Ledélicedessens.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css">
-  
+  <title>la delices sens</title>
+  <body>
   <header class="header">
     <div>
       <a href="index.html"><i class="fas fa-arrow-left btn-retour"></i></a>
@@ -179,7 +180,7 @@
           <a class="footer__link" href="#">Mentions légales</a>
         </li>
         <li class="footer__listElt">
-          <a class="footer__link" href="#">Contact</a>
+          <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
         </li>
       </ul>
     </div>
