--- a/Alafrançaise.html
+++ b/Alafrançaise.html
@@ -36,7 +36,7 @@
           <div class="menucart__price">25€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon  fas fa-check"></i>
+              <i class="  fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -49,7 +49,7 @@
           <div class="menucart__price">35€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -62,7 +62,7 @@
           <div class="menucart__price">20€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class=" menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -78,7 +78,7 @@
           <div class="menucart__price">40€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -91,7 +91,7 @@
           <div class="menucart__price">35€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -104,7 +104,7 @@
           <div class="menucart__price">44€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -120,7 +120,7 @@
           <div class="menucart__price">18€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -133,7 +133,7 @@
           <div class="menucart__price">22€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -146,7 +146,7 @@
           <div class="menucart__price">23€</div>
           <div class="menucart__confirmation">
             <div class="menucart__wrapIcon">
-              <i class="menucart__icon fas fa-check"></i>
+              <i class=" fas fa-check"></i>
             </div>
           </div>
         </section>
@@ -160,22 +160,22 @@
     <div class="footer__contenu">
       <span class="footer__logo">ohmyfood</span>
       <ul class="footer__list">
-        <li class="footer__listElt">
+        <li>
           <a class="footer__link" href="#"
             ><i class="footer__icon fas fa-utensils"></i>Proposer un
             restaurant</a
           >
         </li>
-        <li class="footer__listElt">
+        <li>
           <a class="footer__link" href="#"
             ><i class="footer__icon fas fa-hands-helping"></i>Devenir
             partenaire</a
           >
         </li>
-        <li class="footer__listElt">
+        <li>
           <a class="footer__link" href="#">Mentions légales</a>
         </li>
-        <li class="footer__listElt">
+        <li>
           <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
         </li>
       </ul>
