--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <main>
       <!--partie adress -->
-      <section class="adress">
+      <div class="adress">
         <i class="fas fa-map-marker-alt adress_icon"></i>
         <span class="adress_text">Paris, Belleville</span>
-      </section>
+      </div>
       <!--partie1 text et btn -->
       <section class="p1">
         <h2 class="p1_titre">Réservez le menu qui<br />vous convient</h2>
