projet_final_aprés_les_modification

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 
     <main>
       <!--partie adress -->
-      <div class="adress">
+      <section class="adress">
         <i class="fas fa-map-marker-alt adress_icon"></i>
-        <span class="adress_text">Paris, Belleville</span>
-      </div>
+        <input
+              class="adress_text input"
+              type="search"
+              value="Paris, Belleville"
+            />
+        
+      </section>
       <!--partie1 text et btn -->
       <section class="p1">
         <h2 class="p1_titre">Réservez le menu qui<br />vous convient</h2>
