--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood</title>
   </head>
-  <body>
+   <body>
     <div class="loaderwarpp">
       <div class="loader"></div>
     </div>
@@ -21,15 +21,14 @@
 
     <main>
       <!--partie adress -->
-      <section class="adress">
+      <div class="adress">
         <i class="fas fa-map-marker-alt adress_icon"></i>
         <input
               class="adress_text input"
               type="search"
               value="Paris, Belleville"
             />
-        
-      </section>
+      </div>
       <!--partie1 text et btn -->
       <section class="p1">
         <h2 class="p1_titre">Réservez le menu qui<br />vous convient</h2>
